--- a/changed/templates/changed/home.html
+++ b/changed/templates/changed/home.html
@@ -49,6 +49,7 @@
                         // Display result
                         document.getElementById("pid").innerHTML = pidOutput;   // pid
                         document.getElementById("name").innerHTML = nameOutput;   // name
+                        document.getElementById("businessName").value = nameOutput;   // name
                         document.getElementById("addr").innerHTML = addrOutput;   // address
                         document.getElementById("rating").innerHTML = ratingOutput;   // rating
                 }
@@ -130,9 +131,9 @@
                                 <!-- card containing business info and review form-->
                                 <!--TODO: make card show up only when we've clicked on a business (shouldn't show up when empty)-->
                                 <div class="card" style="margin:2vh">
-                                        <h5 class="card-header text-center" style="color:#5d7fa3" id="name">
+                                        <h5 class="card-header text-center" style="color:#5d7fa3" id="name" name="name">
                                         </h5>
-
+                                        
                                         <div class="card-body">
                                                 <p style="color:rgb(122, 122, 122)" id="addr"></p>
                                                 <p id="rating"></p>
@@ -148,7 +149,10 @@
                                                         Reviews</button>
                                                 <div class="collapse" id="reviewform">
                                                         <!--review form-->
-                                                        <form>
+                                                        <form action="{% url 'changed:processreview' %}", method="POST">
+                                                                {% csrf_token %}
+                                                                <!--Business name-->
+                                                                <input hidden id="businessName" name="businessName">
                                                                 <!--covid policy rating-->
                                                                 <div class="form-group">
                                                                         <br>
@@ -160,11 +164,11 @@
                                                                                 <option value="" selected disabled>--
                                                                                         select an
                                                                                         option --</option>
-                                                                                <option>1</option>
-                                                                                <option>2</option>
-                                                                                <option>3</option>
-                                                                                <option>4</option>
-                                                                                <option>5</option>
+                                                                                <option id="1", value="1">1</option>
+                                                                                <option id="2", value="2">2</option>
+                                                                                <option id="3", value="3">3</option>
+                                                                                <option id="4",value="4">4</option>
+                                                                                <option id="5", value="5">5</option>
                                                                         </select>
                                                                 </div>
                                                                 <!--covid dining policy checkboxes-->
@@ -204,7 +208,7 @@
                                                                                 class="col-form-label">Additional
                                                                                 Comments:</label>
                                                                         <textarea class="form-control"
-                                                                                id="review-text"></textarea>
+                                                                                id="review-text" name="review-text"></textarea>
                                                                 </div>
                                                                 <!--submit button, doesn't do anything yet-->
                                                                 <button type="submit"
@@ -219,6 +223,7 @@
                                         <p id="xCoord"></p>
                                         <p id="yCoord"></p>
                                         <p id="pid"></p>
+                                        <!--The below line won't work because only one element can have id=name-->
                                         <p id="name"></p>
                                 </div>
                         </div>
