--- a/changed/templates/changed/base_html.html
+++ b/changed/templates/changed/base_html.html
@@ -33,11 +33,21 @@
         {% if user.is_authenticated %}
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link">Hi, {{user.username}}!</a>
-                </li>
-            </ul>
+                <div style="margin-right:5px">
+                    <a style="color:white">Hi, {{user.username}}! </a>
+                </div>
+                <div class="dropdown">
+                    <a class="" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img class="user-icon" width="25" height="25"
+                            src="https://live.staticflickr.com/65535/51003067240_f1b5e0e7f1_o.png">
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                        <a class="dropdown-item" href="{% url 'changed:logout' %}">Log Out</a>
+                    </div>
+                </div>
         </div>
+        </ul>
+
         {% endif %}
     </div>
 </nav>
