--- a/changed/templates/changed/home.html
+++ b/changed/templates/changed/home.html
@@ -149,12 +149,12 @@
                                                 </a>
                                                 <!--TODO: button should redirect to another page with its reviews 
                                                         (like thoughtsList from the Django HW), or toggle to reveal list of reviews-->
-                                                        
-                                                        <button type="button" class="btn"
+
+                                                <button type="button" class="btn"
                                                         style="background-color:#5d7fa3; color:white">Read
                                                         Reviews</button>
 
-                                                
+
                                                 <div class="collapse" id="reviewform">
                                                         <!--review form-->
                                                         <form action="{% url 'changed:processreview' %}" ,
@@ -213,12 +213,20 @@
                                                                                 <div>
                                                                                         <input class="form-check-input"
                                                                                                 type="checkbox" value=""
-                                                                                                id="capacity-limit">
+                                                                                                id="curbside">
                                                                                         <label class="form-check-label"
-                                                                                                for="capacity-limit">
-                                                                                                Capacity Limit</label>
+                                                                                                for="curbside">
+                                                                                                Curbside</label>
                                                                                 </div>
                                                                         </div>
+                                                                </div>
+                                                                <!-- place to specify capacity limit -->
+                                                                <div class="form-group">
+                                                                        <label for="title"
+                                                                                class="col-form-label">Capacity Limit
+                                                                                (if applicable):</label>
+                                                                        <input type="text" class="form-control"
+                                                                                id="capacity-limit">
                                                                 </div>
                                                                 <!--place for other comments-->
                                                                 <div class="form-group">
