Add new to-do, edit form and related comments

--- a/changed/templates/changed/home.html
+++ b/changed/templates/changed/home.html
@@ -147,6 +147,7 @@
                                                 <p id="rating"></p>
                                                 <!-- TODO: display average COVID policy compliance rating from reviews-->
                                                 <p>COVID Policy Compliance: /5</p>
+                                                <!-- TODO: display latest reported capacity limit-->
                                                 <!--button to write a review-->
                                                 <a class="btn" data-toggle="collapse" href="#reviewform" role="button"
                                                         aria-expanded="false" aria-controls="reviewform"
@@ -226,11 +227,11 @@
                                                                                 </div>
                                                                         </div>
                                                                 </div>
-                                                                <!-- place to specify capacity limit -->
+                                                                <!-- place to specify capacity limit, or "none" if there isn't one-->
                                                                 <div class="form-group">
                                                                         <label for="title"
-                                                                                class="col-form-label">Capacity Limit
-                                                                                (if applicable):</label>
+                                                                                class="col-form-label">Capacity
+                                                                                Limit:</label>
                                                                         <input type="text" class="form-control"
                                                                                 id="capacity-limit">
                                                                 </div>
